--- a/Ethereum/pet-shop-tutorial/Readme
+++ b/Ethereum/pet-shop-tutorial/Readme
@@ -1,6 +1,8 @@
 ## Ethereum Pet Shop
+First， I want to talk about Ethereum
+1） ETHEREUM OVERVIEW
 
-Trust ： counterparty risk
+Trust ： counterparty risk （Byzantine General Problem）
 
 Modern shared databases use techniques:
 
